--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 title: Christopher Seaman
 description: Building Growth & Data Science Teams
