--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: Christopher Seaman
 description: Building Growth & Data Science Teams
-markdown: GFM
+# markdown: GFM
+
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have 
