--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Christopher Seaman
 description: Building Growth & Data Science Teams
-# markdown: GFM
+markdown: kramdown
 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
