--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,8 @@ site_name: Christopher Seaman
 site_url: https://badmath.org
 theme: material
   font:
-    text: Fira Sans
+    text: Source Serif 4
     code: Fira Mono
+    # text: Fira Sans
     # text: Source Sans 3
     # code: Source Code Pro
