--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,13 @@
 site_name: Christopher Seaman
 site_url: https://badmath.org
-theme: material
+theme: 
+  name: material
+  locale: en
+  highlightjs: true
+  hljs_languages:
+    - sql
+    - python
+    - yaml
   font:
     text: Source Serif 4
     code: Fira Mono
-    # text: Fira Sans
-    # text: Source Sans 3
-    # code: Source Code Pro
